0032859: Modeling Algorithms - BRepLib_FindSurface not return an expect plane

BRepLib/BRepLib_FindSurface.cxx = removing very small values from coordinate of normal
bug32859 - test case added